[package]
name        = "deep_log"
version     = "0.2.0"
edition     = "2021"
description = "Dual-axis logging system : level (verbosity 0→100) + zone (bitflag per system)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/your_username/deep_log"
homepage    = "https://github.com/your_username/deep_log"
documentation = "https://docs.rs/deep_log"
readme      = "README.md"
keywords    = ["logging", "debug", "gamedev", "bitflag"]
categories  = ["development-tools::debugging"]
authors     = ["your_name <your_email@example.com>"]
rust-version = "1.60"
exclude     = ["target/", ".git/"]

[lib]
name = "deep_log"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
